add security fixes section to release drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,6 +4,9 @@ categories:
   - title: 'Enhancements'
     labels:
       - 'enhancement'
+  - title: 'Security Fixes'
+    labels:
+      - 'vuln'
   - title: 'Fixes'
     labels:
       - 'bug'
